--- a/core-app/package.json
+++ b/core-app/package.json
@@ -9,6 +9,7 @@
     "ramda": "^0.26.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "scriptjs": "^2.5.9"
   },
