--- a/feature-app/package.json
+++ b/feature-app/package.json
@@ -12,7 +12,12 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/scriptjs": "^0.0.2",
     "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.0",
+    "react-vis-types": "^0.0.3",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
@@ -25,7 +30,8 @@
     "ramda": "^0.26.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js",
