--- a/feature-app/package.json
+++ b/feature-app/package.json
@@ -14,6 +14,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "node-sass": "^4.13.0",
     "react-vis-types": "^0.0.3",
     "sass-loader": "^8.0.0",
