--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "homepage": "https://github.com/khoi-fish/share-loader",
   "peerDependencies": {
-    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "webpack": "^4.0.0"
   },
   "engines": {
-    "node": ">= 4.3 < 5.0.0 || >= 5.10"
+    "node": ">= 5.10"
   }
 }
